--- a/ProductoPatrones/pom.xml
+++ b/ProductoPatrones/pom.xml
@@ -11,4 +11,16 @@
         <maven.compiler.target>19</maven.compiler.target>
         <exec.mainClass>com.mycompany.productopatrones.ProductoPatrones</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.23</version>
+        </dependency>
+        <dependency>
+            <groupId>itext5</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.12</version>
+        </dependency>
+    </dependencies>
 </project>
